src/App.css
/* ... */
.contact .contact-content .left .icons {
    margin: 10px 0;
}

.contact .contact-content .row {
    display: flex;
    height: 65px;
    align-items: center;
}

.contact .contact-content .row .info {
    margin-left: 20px;
}

.contact .contact-content .row i {
    font-size: 25px;
    color: red;
}

.contact .contact-content .row .info .head {
    font-weight: 500;
}

.contact .contact-content .row .info .sub-title {
    color: #333;
}

.contact .right form .fields {
    display: flex;
}

.contact .right form .field,
.contact .right form .fields .field {
    height: 45px;
    width: 100%;
    margin-bottom: 15px;
}

.contact .right form .textarea {
    height: 80px;
    width: 100%;
}

.contact .right form .name {
    margin-right: 10px;
}

.contact .right form .email {
    margin-right: 10px;
}

.contact .right form .field input,
.contact .right form .textarea textarea {
    height: 100%;
    width: 100%;
    border: 1px solid lightgrey;
    outline: none;
    border-radius: 6px;
    padding: 0 15px;
    font-size: 17px;
    font-family: "poppins", sans-serif;
}

.contact .right form .textarea textarea {
    padding-top: 10px;
    resize: none;
}

.contact .right form .button {
    height: 47px;
    width: 170px;
}

.contact .right form .button button {
    width: 100%;
    height: 100%;
    border: 2px solid red;
    color: white;
    background: red;
    font-size: 20px;
    font-weight: 500;
    border-radius: 6px;
    cursor: pointer;
    transition: all 0.3s ease;
}

.contact .right form .button button:hover {
    color: red;
    background: none;
}





/* footer section styling  */
footer {
    background-color: #111;
    padding: 20px 23px;
    color: white;
    text-align: center;
}

footer span a {
    color: red;
    text-decoration: none;
}

footer span a:hover {
    text-decoration: underline;
}

.scroll-up-btn {
    display: flex;
    background-color: red;
    height: 43px;
    width: 40px;
    position: fixed;
    bottom: 30px;
    right: 30px;
    align-items: center;
    /* line-height: 45px; */
    color: white;
    z-index: 999;
    font-size: 25px;
    border-radius: 6px;
    opacity: 0;
}

.scroll-up-btn i {
    margin-left: 9px;
}

.show {
    opacity: 1;
}



/* Responsive Media Query */

@media (max-width: 1300px) {
    .home .max-width {
        margin-left: 0px;
    }
}

@media (max-width: 1500px) {
    .projects .project-content .card img {
        width: 450px;
    }

}

@media (max-width: 1100px) {

    .services {
        height: 2000px;
    }

    .home {
        height: 700px;
    }

    .projects .project-content {
        display: inline-block;
        margin-top: -30px;
        margin-bottom: 30px;
    }

    .projects .project-content .card {
        margin-left: 120px;
        margin-bottom: 30px;
    }
}

@media (max-width: 991px) {
    .max-width {
        padding: 0 50px;
    }

    .projects .project-content .card {
        margin-left: 50px;
    }

    .about .about-content .left img {
        width: 400px;
        height: 700px;
    }
}

@media (max-width: 940px) {
    .about .about-content {
        display: block;
    }

    .menu-btn {
        display: block;
        z-index: 999;
    }

    .menu-btn i.active::before {
        content: "\f00d";
    }

    .navbar .menu {
        position: fixed;
        height: 100vh;
        width: 65%;
        left: -100%;
        top: 0;
        background: red;
        text-align: center;
        padding-top: 80px;
        transition: all 0.3s ease;
    }

    .navbar .menu.active {
        left: 0;
    }

    .navbar .menu li {
        display: block;
        /* font-size: 19px; */
    }

    .navbar .menu li a {
        display: inline-block;
        margin: 20px 0;
        font: 25px;
    }

    .home .home-content .text-2 {
        font-size: 70px;
    }

    .home .home-content .text-3 {
        font-size: 35px;
    }

    .max-width {
        max-width: 800px;
    }

    .about .about-content .column {
        width: 100%;
    }

    .about .about-content .left {
        display: flex;
        justify-content: center;
        margin: 0 auto 60px;
    }

    .about .about-content .right {
        flex: 100%;
    }

    .services .serv-content .card {
        width: calc(50% - 10px);
        margin-bottom: 20px;
    }

    .skills .skills-content .column,
    .contact .contact-content .column {
        width: 100%;
        margin-bottom: 25px;
    }

    .navbar .logo {
        z-index: 999;
    }
}

@media (max-width: 730px) {

    .projects .project-content .card {
        margin-left: 30px;
        width: 400;
    }

    .projects .project-content .card img {
        width: 480px;
    }
}

@media (max-width: 690px) {
    .max-width {
        padding: 0 23px;
    }

    .home .home-content .text-2 {
        font-size: 60px;
    }

    .home .home-content .text-3 {
        font-size: 32px;
    }

    .home .home-content a {
        font-size: 20px;
        padding: 9px 25px;
    }

    .services .serv-content .card {
        width: 100%;
    }

    .about .about-content .left img {
        height: 400px;
    }

    .projects .project-content .card {
        margin-left: 30px;
        width: 500px;
    }

    .projects .project-content .card .box img {
        width: 450px !important;
    }

    .projects .project-content .card .box .btn {
        padding: 10px 100px;
        font-size: 20px;
    }

    .about .about-content .left img {
        width: 400px;
        height: 650px;
    }

    .home .right_side .box img {
        display: none;
    }

    .home .home-content {
        width: 100vw;
    }
}

@media (max-width: 580px) {
    .projects .project-content .card {
        margin-left: 10px;
        width: 430px;
        height: 370px;
    }

    .projects .project-content .card .box img {
        width: 400px !important;
    }

    .projects .project-content .card .box .btn {
        padding: 10px 100px;
        font-size: 20px;
    }

}
/* ... */

